# test-cmake-tools

./: CMakeLists.txt  conan_provider.cmake  conanfile.py
src/: main.cpp  mypkg.cpp  mypkg.h
